95 % done with index.html, bugfixed header-2.html, started on legal-services

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -16,23 +16,23 @@
 <!--    </section>-->
 <!--</div>-->
 <div class="d-flex flex-row justify-content-center contact-form px-5 py-5">
-    <h2 class="text-white col-xl-4 col-lg-6 display-4 d-flex align-items-center justify-content-center pb-5 px-5">CONTACT US NOW FOR A CONSULTATION</h2>
+    <h2 class="text-white col-xl-3 col-lg-4 display-4 d-flex align-items-center justify-content-center pb-5 px-5">CONTACT US NOW FOR A CONSULTATION</h2>
     <form action="https://formspree.io/f/mkndnqlr" method="POST"
           class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-6 mx-xl-5 pt-5">
         <div class="field-group inputs-container">
-            <div class="mb-3">
-                <input type="email" class="form-control opacity-25" id="inputName" placeholder="NAME">
+            <div class="mb-3 form-text-color">
+                <input type="email" class="form-control form-text-color" id="inputName" placeholder="NAME" style="background-color: hsla(0, 0%, 100%, .25);">
             </div>
-            <div class="mb-3">
-                <input type="email" class="form-control opacity-25" id="inputEmail1" placeholder="EMAIL">
+            <div class="mb-3 form-text-color">
+                <input type="email" class="form-control form-text-color" id="inputEmail1" placeholder="EMAIL" style="background-color: hsla(0, 0%, 100%, .25);">
             </div>
-            <div class="mb-3">
-                <input type="text" class="form-control opacity-25" id="inputPhone1" placeholder="PHONE NUMBER">
+            <div class="mb-3 form-text-color">
+                <input type="text" class="form-control form-text-color" id="inputPhone1" placeholder="PHONE NUMBER" style="background-color: hsla(0, 0%, 100%, .25);">
             </div>
         </div>
         <div class="field-group message-container">
-            <div class="mb-3">
-                <textarea type="text" class="form-control opacity-25" id="inputMessage1" placeholder="MESSAGE"></textarea>
+            <div class="mb-3 form-text-area-color">
+                <textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: hsla(0, 0%, 100%, .25);" ></textarea>
             </div>
             <input type="submit" class="d-none d-lg-block ms-lg-auto formSubmit-Desktop" value="submit" />
         </div>
