--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,7 @@
 <!--        </div>-->
     </div>
     <div class="d-none d-lg-block">
-        <div class="row justify-content-between px-5">
+        <div class="row justify-content-between px-5 me-0">
             {% if general_data.footer_logo_url %}
             <div class="col-4">
                 <img class="img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}"/>
@@ -73,7 +73,7 @@
                 </h6>
             </div>
             <div class="col-3">
-                <div class="">
+                <div class="col-10">
                     <a href="{{ general_data.google_map_url }}" class="">
                         <address class=" " style="margin-bottom: 0;">
                             503 W University Ave
