--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,18 +53,16 @@
                 <li class="nav-item mx-xl-4 mx-3">
                     <a class="nav-link menu-link text-white active" aria-current="page" href="/">Home</a>
                 </li>
-                <li class="nav-item dropdown mx-xl-4 mx-3">
+                <li class="nav-item dropdown mx-xl-4 mx-3 d-flex">
                     <a class="nav-link text-white" href="/legal-services">LEGAL SERVICES</a>
-                </li>
-                <li class="nav-item mx-xl-4 mx-3 dropdown">
                     <a class="nav-link text-white dropdown-toggle dropdown-center " href="#" id="legalDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                     <ul class="dropdown-menu fs-3 border-0 px-3 py-2 bg-transparent">
-                        <li><a class="dropdown-item text-uppercase text-white" href="/criminal-law">criminal law</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white" href="/personal-injury">personal injury</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white" href="/dwi-owi">dwi/owi</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white" href="/estate-planning">estate planning</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white" href="/family-law">family law</a></li>
-                        <li><a class="dropdown-item text-uppercase text-white" href="/additional-services">additional services</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item" href="/criminal-law">criminal law</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item" href="/personal-injury">personal injury</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item" href="/dwi-owi">dwi/owi</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item" href="/estate-planning">estate planning</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item" href="/family-law">family law</a></li>
+                        <li><a class="dropdown-item text-uppercase text-white hover-item" href="/additional-services">additional services</a></li>
                     </ul>
                 </li>
                 <li class="nav-item mx-xl-4 mx-3">
