reworked desktop version of legal-services page, bugfixed footer, edited index.html form text box

--- a/_includes/header_2.html
+++ b/_includes/header_2.html
@@ -39,7 +39,7 @@
 <!--        </div>-->
 <!--    </div>-->
 <!--</section>-->
-<nav class="d-lg-block d-none navbar navbar-expand-lg bg-white z-3 py-5 w-100 z-1">
+<nav class="d-lg-block d-none navbar navbar-expand-lg bg-white z-3 py-5 w-100 z-1 position-fixed">
     {% assign general_data = site.data.general_settings %}
     <div class="container-fluid justify-content-end">
         <div class=" d-flex justify-content-end col-5 ">
@@ -51,25 +51,25 @@
 <!--        <div class="col-5 row ">-->
             <ul class="navbar-nav fs-4 px-lg-3 px-xl-0">
                 <li class="nav-item mx-xl-4 mx-3">
-                    <a class="nav-link menu-link index-info-color active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link menu-link index-info-color" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown mx-xl-4 mx-3 d-flex">
-                    <a class=" nav-link " href="/legal-services" style="color: rgba(0, 46, 59, 1) !important;">LEGAL SERVICES</a>
-                    <a class="nav-link index-info-color dropdown-toggle dropdown-center" style="color: rgba(0, 46, 59, 1) !important;"  href="#" id="legalDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+                    <a class=" nav-link " href="/legal-services">LEGAL SERVICES</a>
+                    <a class="nav-link index-info-color dropdown-toggle dropdown-center"  href="#" id="legalDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                     <ul class="dropdown-menu fs-5 border-0 px-3 py-2 bg-white">
-                        <li><a class="dropdown-item text-uppercase " href="/criminal-law" style="color: rgba(0, 46, 59, 1) !important;">criminal law</a></li>
-                        <li><a class="dropdown-item text-uppercase " href="/personal-injury" style="color: rgba(0, 46, 59, 1) !important;">personal injury</a></li>
-                        <li><a class="dropdown-item text-uppercase " href="/dwi-owi" style="color: rgba(0, 46, 59, 1) !important;">dwi/owi</a></li>
-                        <li><a class="dropdown-item text-uppercase " href="/estate-planning" style="color: rgba(0, 46, 59, 1) !important;">estate planning</a></li>
-                        <li><a class="dropdown-item text-uppercase " href="/family-law" style="color: rgba(0, 46, 59, 1) !important;">family law</a></li>
-                        <li><a class="dropdown-item text-uppercase " href="/additional-services" style="color: rgba(0, 46, 59, 1) !important;">additional services</a></li>
+                        <li><a class="dropdown-item text-uppercase " href="/criminal-law">criminal law</a></li>
+                        <li><a class="dropdown-item text-uppercase " href="/personal-injury">personal injury</a></li>
+                        <li><a class="dropdown-item text-uppercase " href="/dwi-owi">dwi/owi</a></li>
+                        <li><a class="dropdown-item text-uppercase " href="/estate-planning">estate planning</a></li>
+                        <li><a class="dropdown-item text-uppercase " href="/family-law">family law</a></li>
+                        <li><a class="dropdown-item text-uppercase " href="/additional-services">additional services</a></li>
                     </ul>
                 </li>
                 <li class="nav-item mx-xl-4 mx-3">
-                    <a class="nav-link index-info-color" href="/about" style="color: rgba(0, 46, 59, 1) !important;">ABOUT</a>
+                    <a class="nav-link index-info-color" href="/about">ABOUT</a>
                 </li>
                 <li class="nav-item mx-xl-4 mx-3">
-                    <a class="nav-link index-info-color" href="/contact" style="color: rgba(0, 46, 59, 1) !important;">CONTACT</a>
+                    <a class="nav-link index-info-color" href="/contact">CONTACT</a>
                 </li>
             </ul>
 <!--        </div>-->
