--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
 {% assign general_data = site.data.general_settings %}
 <footer class="py-5 ">
+
+<!--    MOBILE HERE-->
+
     <div class="px-5 d-flex row justify-content-center d-lg-none">
         {% if general_data.footer_logo_url %}
         <div class="col-12 col-sm-10 py-4">
@@ -56,50 +59,59 @@
 <!--            </div>-->
 <!--        </div>-->
     </div>
-    <div class="d-none d-lg-block">
-        <div class="row justify-content-between px-5 me-0">
-            {% if general_data.footer_logo_url %}
-            <div class="col-4">
-                <img class="img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}"/>
-            </div>
-            {% endif %}
-            {% if general_data.address %}
-            {{ general_data.address.address }}
-            {% endif %}
-            <div class="col-4">
-                <h6 class="d-flex justify-content-center text-primary px-3 fs-1">
-                    VETERAN OWNED
-                    20 YEARS EXPERIENCE
-                </h6>
-            </div>
-            <div class="col-3">
-                <div class="col-10">
-                    <a href="{{ general_data.google_map_url }}" class="">
-                        <address class=" " style="margin-bottom: 0;">
-                            503 W University Ave
-                            Lafayette, LA 70506
-                        </address>
-                    </a>
+
+<!--    DESKTOP HERE-->
+
+    <div class="container-fluid">
+        <div class="d-none d-lg-block">
+            <div class="row justify-content-evenly px-5 me-0">
+                {% if general_data.footer_logo_url %}
+                <div class="col-4 d-flex justify-content-end">
+                    <div class="col-8 ">
+                        <img class="img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}"/>
+                    </div>
                 </div>
+                {% endif %}
                 {% if general_data.address %}
-                <div class="">
-                    <a href="mailto:{{ general_data.email }}" class="">{{ general_data.email }}</a>
-                </div>
+                {{ general_data.address.address }}
                 {% endif %}
-                {% if general_data.phone %}
-                <div class="">
-                    <a href="tel:{{general_data.phone}}">{{ general_data.phone }}</a>
+                <div class="col-4 d-flex justify-content-center">
+                    <div class="d-flex justify-content-center ">
+                        <h6 class=" text-primary col-8 fs-2 text-center">
+                            VETERAN OWNED
+                            20 YEARS EXPERIENCE
+                        </h6>
+                    </div>
                 </div>
-                {% endif %}
-                <div class="col py-5">
-                    <p class="fw-bold ">CONNECT WITH US</p>
-                    {% for social_account in general_data.social_accounts %}
-                     <a href="{{social_account.url}}"><img src="{{social_account.icon}}" alt="{{social_account.url}}" /></a>
-                    {% endfor %}
+                <div class="col-3 d-flex flex-column justify-content-start">
+                    <div class="col-10 fs-4 col-xl-12">
+                        <a href="{{ general_data.google_map_url }}" class="">
+                            <address class="col-xl-8 lh-sm text-uppercase" style="margin-bottom: 0;">
+                                503 W University Ave
+                                Lafayette, LA 70506
+                            </address>
+                        </a>
+                    </div>
+                    {% if general_data.address %}
+                    <div class=" fs-4">
+                        <a href="mailto:{{ general_data.email }}" class="lh-sm">{{ general_data.email }}</a>
+                    </div>
+                    {% endif %}
+                    {% if general_data.phone %}
+                    <div class="fs-4">
+                        <a href="tel:{{general_data.phone}}" class="lh-sm">{{ general_data.phone }}</a>
+                    </div>
+                    {% endif %}
+                    <div class="col py-5">
+                        <p class="fw-bold fs-4 ">CONNECT WITH US</p>
+                        {% for social_account in general_data.social_accounts %}
+                         <a href="{{social_account.url}}"><img src="{{social_account.icon}}" alt="{{social_account.url}}" /></a>
+                        {% endfor %}
+                    </div>
                 </div>
+
             </div>
 
         </div>
-
     </div>
 </footer>
