--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,46 +780,46 @@ p:not(footer p, .pageHero p) {
 }
 .allServices {
     color: #002e3b;
-    font-size: 2rem;
-    height: auto;
+    /*font-size: 2rem;*/
+    /*height: auto;*/
 }
 .allServices__ImgWrapper {
-    display: none;
+    /*display: none;*/
 }
 .allServices__Service {
     background-image: var(--bgImage);
     background-size: cover;
-    padding-top: 2.3rem;
+    /*padding-top: 2.3rem;*/
     padding-bottom: 2.3rem;
 }
 .allServices__Service__Text {
     background-color: hsla(0, 0%, 100%, 0.8);
-    width: 95%;
-    margin-right: auto;
-    padding: 2.6rem 2.3rem 2.6rem 11vw;
+    /*width: 95%;*/
+    /*margin-right: auto;*/
+    /*padding: 2.6rem 2.3rem 2.6rem 11vw;*/
 }
 .allServices__Service__Text h3 {
-    margin-bottom: 2.4rem;
+    /*margin-bottom: 2.4rem;*/
     font-weight: 700;
     text-transform: uppercase;
     font-size: 2.5rem;
 }
 .allServices__Service__Text ul {
     margin-top: 1em;
-    display: block;
+    /*display: block;*/
 }
 .allServices__Service__Text ul li {
-    margin-bottom: 0.5em;
+    /*margin-bottom: 0.5em;*/
 }
 .allServices__Service__Text a {
-    margin-top: 3rem;
-    display: inline-block;
-    font-size: 1.6rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #002e3b;
-    border: 1px solid #002e3b;
-    padding: 1.3rem 2.7rem;
+    /*margin-top: 3rem;*/
+    /*display: inline-block;*/
+    /*font-size: 1.6rem;*/
+    /*text-transform: uppercase;*/
+    /*text-decoration: none;*/
+    /*color: #002e3b;*/
+    /*border: 1px solid #002e3b;*/
+    /*padding: 1.3rem 2.7rem;*/
 }
 /*@media only screen and (min-width: 1024px) {*/
 /*    .allServices__Service {*/
@@ -1479,7 +1479,7 @@ p:not(footer p, .pageHero p) {
 }
 .cfForm input:not([type="submit"]),
 .cfForm textarea {
-    margin-bottom: 1.1rem;
+    /*margin-bottom: 1.1rem;*/
     padding: 1.3rem 1.6rem;
     background-color: #eef2f3;
     display: block;
