--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,10 @@
 		<link rel="canonical" href="{{ page.url }}" />
 		<link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="/assets/css/style.css" />
+		<link rel="stylesheet" href="/assets/css/new_styles.css" />
+
+		<script src="https://kit.fontawesome.com/178160c53c.js" crossorigin="anonymous"></script>
+
         <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/favicon/apple-icon-57x57.png" />
         <link rel="apple-touch-icon" sizes="60x60" href="/assets/images/favicon/apple-icon-60x60.png" />
         <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/favicon/apple-icon-72x72.png" />
@@ -32,6 +36,12 @@
 			gtag('js', new Date());
 			gtag('config', '{{site.data.general_settings.ga_id}}');
 		</script>
+		<script>
+            $('.dropdown-item').on('click', function() {
+            $('.content-item').hide();  // Hide all content items
+            $($(this).data('target')).show();  // Show the one corresponding to the clicked dropdown item
+            });
+        </script>
 		{{ site.data.general_settings.head_code | raw}}
 	</head>
 	<body>
