--- a/assets/css/new_styles.css
+++ b/assets/css/new_styles.css
@@ -246,3 +246,22 @@ input.form-control, textarea.form-control {
 .link-container{
     align-items: flex-start;
 }
+.info-cutter {
+max-height: 25%;
+}
+
+.font-title {
+    font-size: 5rem;
+}
+
+.font-size-3rem {
+    font-size: 3rem;
+
+}
+.font-size-3-5rem{
+    font-size: 3.5rem;
+}
+.section-title{
+    font-weight: 700;
+    font-size: 2.5rem;
+}
