--- a/assets/css/new_styles.css
+++ b/assets/css/new_styles.css
@@ -261,7 +261,14 @@ max-height: 25%;
 .font-size-3-5rem{
     font-size: 3.5rem;
 }
+
+.f-weight-500{
+    font-weight: 500;
+}
 .section-title{
     font-weight: 700;
     font-size: 2.5rem;
+}
+.font-size-7-rem{
+    font-size: 7rem;
 }
