--- a/assets/css/new_styles.css
+++ b/assets/css/new_styles.css
@@ -272,3 +272,22 @@ max-height: 25%;
 .font-size-7-rem{
     font-size: 7rem;
 }
+.font-size-5-rem{
+    font-size: 5rem;
+}
+
+/**/
+/*ABOUT PAGE*/
+/**/
+
+.about-mobile-img {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.about-mobile-cover {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
