completed mobile about.html, bugfixing desktop xl about.html

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,14 +1,14 @@
-<form action="https://formspree.io/f/mkndnqlr" method="POST" class="cfForm">
-	<div class="formFlex">
+<form action="https://formspree.io/f/mkndnqlr" method="POST" class="cfForm px-5">
+	<div class="formFlex px-2">
 		<div class="formSmallInputs inputWrapper">
-			<input class="" name="NAME" type="text" placeholder="NAME" />
-			<input class="" name="EMAIL" type="text" placeholder="EMAIL" />
-			<input class="" name="PHONE NUMBER" type="text" placeholder="PHONE NUMBER" />
+			<input class=" my-4" name="NAME" type="text" placeholder="NAME" />
+			<input class="my-4" name="EMAIL" type="text" placeholder="EMAIL" />
+			<input class="my-4" name="PHONE NUMBER" type="text" placeholder="PHONE NUMBER" />
 		</div>
-		<div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
+		<div class="formLargeInputs inputWrapper"><textarea class="inputLarge my-4" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
 
 	</div>
-	<div class="d-flex align-items-end">
-		<input type="submit" class="formSubmit-Mobile col-5 col-sm-3" value="submit" />
+	<div class="d-flex align-items-end px-2">
+		<input type="submit" class="formSubmit-Mobile col-5 col-sm-3 px-2" value="submit" />
 	</div>
 	</form>
