--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,7 +49,10 @@
 		<div>
                     {% include header_2.html %}
                     {{ content }}
-                     {% include footer.html %}
+			<div class="d-block d-lg-none ">
+					{% include form.html %}
+			</div>
+					{% include footer.html %}
 
 		</div>
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
