--- a/assets/css/new_styles.css
+++ b/assets/css/new_styles.css
@@ -284,6 +284,7 @@ max-height: 25%;
     padding: 10.6rem 13rem;
 }
 
+
 .about-mobile-img {
     width: 200px;
     height: 200px;
@@ -294,4 +295,12 @@ max-height: 25%;
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+@media (min-width: 1200px) {
+    .about-mainText-padding {
+    padding-right: 0rem !important;
+    padding-left: 18rem !important;
+
+    }
 }
