Added recaptcha to forms, completed contact.html, modified criminal.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,4 +32,8 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/assets/images/favicon/ms-icon-144x144.png"/>
         <meta name="theme-color" content="#ffffff"/>
+
+<!--        GOOGLE RECAPTCHA-->
+        <script src="https://www.google.com/recaptcha/api.js?render=6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo" async defer></script>
+
     </head>
