--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -15,26 +15,81 @@
 <!--      </form>-->
 <!--    </section>-->
 <!--</div>-->
-<div class="d-flex flex-row justify-content-center contact-form px-5 py-5 bg-success">
-    <h2 class="text-white col-xl-3 col-lg-4 display-4 d-flex align-items-center justify-content-center pb-5 px-5">CONTACT US NOW FOR A CONSULTATION</h2>
-    <form action="https://formspree.io/f/mkndnqlr" method="POST"
-          class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-6 mx-xl-5 pt-5">
-        <div class="field-group inputs-container">
-            <div class="mb-3 form-text-color">
-                <input type="email" class="form-control form-text-color" id="inputName" placeholder="NAME" style="background-color: hsla(0, 0%, 100%, .25);">
-            </div>
-            <div class="mb-3 form-text-color">
-                <input type="email" class="form-control form-text-color" id="inputEmail1" placeholder="EMAIL" style="background-color: hsla(0, 0%, 100%, .25);">
-            </div>
-            <div class="mb-3 form-text-color">
-                <input type="text" class="form-control form-text-color" id="inputPhone1" placeholder="PHONE NUMBER" style="background-color: hsla(0, 0%, 100%, .25);">
-            </div>
-        </div>
-        <div class="field-group message-container">
-            <div class="mb-3 form-text-area-color">
-                <textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: hsla(0, 0%, 100%, .25);" ></textarea>
-            </div>
-            <input type="submit" class="d-none d-lg-block ms-lg-auto formSubmit-Desktop" value="submit" />
-        </div>
-    </form>
-</div>
+
+
+
+
+<!--<div class="d-flex flex-row justify-content-center contact-form px-5 py-5 bg-success">-->
+<!--    <h2 class="text-white col-xl-3 col-lg-4 display-4 d-flex align-items-center justify-content-center pb-5 px-5">CONTACT US NOW FOR A CONSULTATION</h2>-->
+<!--    <form action="https://formspree.io/f/mkndnqlr" method="POST">-->
+<!--          <script>-->
+<!--              grecaptcha.ready(function () {-->
+<!--                  grecaptcha.execute('6LdnuyEqAAAAAOYHIAj7ieHcFABlBdFKZIRxCHQo', {action: 'submit'}).then(function (token) {-->
+<!--                      console.info("got token: " + token);-->
+<!--                      document.getElementById('g-recaptcha-response').value = token;-->
+<!--                  });-->
+<!--              });-->
+<!--          </script>-->
+<!--          class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-6 mx-xl-5 pt-5">-->
+<!--        <div class="field-group inputs-container">-->
+<!--            <div class="mb-3 form-text-color">-->
+<!--                <input type="email" class="form-control form-text-color" id="inputName" placeholder="NAME" style="background-color: hsla(0, 0%, 100%, .25); " required>-->
+<!--            </div>-->
+<!--            <div class="mb-3 form-text-color">-->
+<!--                <input type="email" class="form-control form-text-color" id="inputEmail1" placeholder="EMAIL" style="background-color: hsla(0, 0%, 100%, .25);" required>-->
+<!--            </div>-->
+<!--            <div class="mb-3 form-text-color">-->
+<!--                <input type="text" class="form-control form-text-color" id="inputPhone1" placeholder="PHONE NUMBER" style="background-color: hsla(0, 0%, 100%, .25);" required>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="field-group message-container">-->
+<!--            <div class="mb-3 form-text-area-color">-->
+<!--                <textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: hsla(0, 0%, 100%, .25);" ></textarea>-->
+<!--            </div>-->
+<!--            <input id="g-recaptcha-response" name="g-recaptcha-response" type="hidden">-->
+<!--            <input type="submit" class="d-none d-lg-block ms-lg-auto formSubmit-Desktop" value="submit" />-->
+<!--        </div>-->
+<!--    </form>-->
+<!--</div>-->
+
+<div class="d-block">
+			<section class="">
+				<div class="d-flex flex-column ">
+					<div class="d-flex d-md-flex flex-column justify-content-center contact-form px-md-5 px-5 py-5 bg-success col-12">
+						{% if page.contact_form_title %}
+						<div class="col-6 col-xl-8 col-lg-10 d-lg-flex  justify-content-lg-start justify-content-xl-around ms-xl-4 justify-content-md-around ms-md-5 ms-lg-0">
+							<h2 class="d-none d-lg-flex text-uppercase display-4 text-white f-weight-500 col-xl-10 col-lg-7 mx-xl-5">{{ page.contact_form_title }}</h2>
+							<h2 class="d-flex d-lg-none text-uppercase display-2 text-white f-weight-500">{{ page.contact_form_title }}</h2>
+
+						</div>
+						{% endif %}
+						<div class="col-xl-12 col-12 d-flex justify-content-xl-around ">
+							<form action="https://formspree.io/f/mkndnqlr" method="POST"
+								  class="d-flex flex-column flex-lg-row align-content-center justify-content-md-start cfForm col-lg-12 col-xl-11 pt-5 col-12 justify-content-lg-between">
+								<div class="d-flex justify-content-md-center col-lg-6">
+									<div class="col-11 col-lg-12 pe-lg-3 ps-xl-5">
+										<div class="mb-3 form-text-color col-12">
+											<input type="email" class="form-control form-text-color" id="inputName" placeholder="NAME" style="background-color: hsla(0, 0%, 100%, .25);">
+										</div>
+										<div class="mb-3 form-text-color col-12">
+											<input type="email" class="form-control form-text-color" id="inputEmail1" placeholder="EMAIL" style="background-color: hsla(0, 0%, 100%, .25);">
+										</div>
+										<div class="mb-3 form-text-color col-12">
+											<input type="text" class="form-control form-text-color" id="inputPhone1" placeholder="PHONE NUMBER" style="background-color: hsla(0, 0%, 100%, .25);">
+										</div>
+									</div>
+								</div>
+								<div class="d-flex justify-content-md-center col-lg-6">
+									<div class="col-11 col-lg-12 ps-lg-3 pe-xl-5">
+										<div class="mb-3 form-text-area-color">
+											<textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: hsla(0, 0%, 100%, .25);" ></textarea>
+										</div>
+										<input type="submit" class="d-block d-lg-block ms-lg-auto formSubmit-Desktop" value="submit" />
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
