Completed mobile criminal-law.html, bugfixing desktop, fixed index.html form

--- a/assets/css/new_styles.css
+++ b/assets/css/new_styles.css
@@ -304,3 +304,13 @@ max-height: 25%;
 
     }
 }
+@media (min-width: 2400px) {
+    .info-me-7 {
+        margin-left: 7.25rem;
+    }
+}
+@media (min-width: 1400px) {
+    .info-me-7 {
+        margin-left: 7.25rem;
+    }
+}
