--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -55,7 +55,7 @@
 <div class="d-block">
 			<section class="">
 				<div class="d-flex flex-column ">
-					<div class="d-flex d-md-flex flex-column justify-content-center contact-form px-md-5 px-5 py-5 bg-success col-12">
+					<div class="d-flex d-md-flex flex-column justify-content-center contact-form px-md-5 bg-success col-12">
 						{% if page.contact_form_title %}
 						<div class="col-6 col-xl-8 col-lg-10 d-lg-flex  justify-content-lg-start justify-content-xl-around ms-xl-4 justify-content-md-around ms-md-5 ms-lg-0">
 							<h2 class="d-none d-lg-flex text-uppercase display-4 text-white f-weight-500 col-xl-10 col-lg-7 mx-xl-5">{{ page.contact_form_title }}</h2>
@@ -81,7 +81,7 @@
 								</div>
 								<div class="d-flex justify-content-md-center col-lg-6">
 									<div class="col-11 col-lg-12 ps-lg-3 pe-xl-5">
-										<div class="mb-3 form-text-area-color">
+										<div class="mb-4 form-text-area-color">
 											<textarea type="text" class="form-control " id="inputMessage1" placeholder="MESSAGE" style="background-color: hsla(0, 0%, 100%, .25);" ></textarea>
 										</div>
 										<input type="submit" class="d-block d-lg-block ms-lg-auto formSubmit-Desktop" value="submit" />
