Reworked Legal-Services webpages, index.html info tabs and footer element sizes

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -55,7 +55,7 @@
 <div class="d-block">
 			<section class="">
 				<div class="d-flex flex-column ">
-					<div class="d-flex d-md-flex flex-column justify-content-center contact-form px-md-5 bg-success col-12">
+					<div class="d-flex d-md-flex flex-column justify-content-center contact-form px-md-5 px-lg-4 px-xl-0 col-12">
 						{% if page.contact_form_title %}
 						<div class="col-6 col-xl-8 col-lg-10 d-lg-flex  justify-content-lg-start justify-content-xl-around ms-xl-4 justify-content-md-around ms-md-5 ms-lg-0">
 							<h2 class="d-none d-lg-flex text-uppercase display-4 text-white f-weight-500 col-xl-10 col-lg-7 mx-xl-5">{{ page.contact_form_title }}</h2>
