--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 {% assign general_data = site.data.general_settings %}
-<footer class=" container-fluid py-5">
+<footer class=" container-fluid py-5 px-0">
 
 <!--    MOBILE HERE-->
     <div class="row mx-0 justify-content-end">
@@ -70,8 +70,8 @@
         <div class="d-none d-lg-block">
             <div class="row justify-content-evenly px-5 me-0">
                 {% if general_data.footer_logo_url %}
-                <div class="col-4 d-flex justify-content-end">
-                    <div class="col-12 ">
+                <div class="col-4 d-flex justify-content-center">
+                    <div class="col-12  col-xl-9">
                         <img class="img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}"/>
                     </div>
                 </div>
@@ -81,13 +81,13 @@
                 {% endif %}
                 <div class="col-4 d-flex justify-content-center">
                     <div class="d-flex justify-content-center ">
-                        <h6 class=" text-primary col-10 col-lg-8 fs-2 text-center">
+                        <h6 class=" text-primary col-10 col-lg-12 col-xl-8 fs-1">
                             VETERAN OWNED 20 YEARS EXPERIENCE
                         </h6>
                     </div>
                 </div>
                 <div class="col-3 d-flex flex-column justify-content-start">
-                    <div class="col-10 fs-4 col-xl-12">
+                    <div class="col-12 fs-4 col-xl-12">
                         <a href="{{ general_data.google_map_url }}" class="">
                             <address class="col-xl-8 lh-sm text-uppercase" style="margin-bottom: 0;">
                                 503 W University Ave
@@ -108,7 +108,7 @@
                     <div class="col py-5">
                         <p class="fw-bold fs-4 ">CONNECT WITH US</p>
                         {% for social_account in general_data.social_accounts %}
-                         <a href="{{social_account.url}}"><img src="{{social_account.icon}}" alt="{{social_account.url}}" /></a>
+                         <a href="{{social_account.url}}" class="col-4"><img src="{{social_account.icon}}" alt="{{social_account.url}}" /></a>
                         {% endfor %}
                     </div>
                 </div>
