--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/assets/css/style.css" />
         <link rel="stylesheet" href="/assets/css/new_styles.css" />
@@ -39,7 +39,6 @@
         </script>
         {{ site.data.general_settings.head_code | raw}}
 
-        </script>
     </head>
     <body>
        {{ site.data.general_settings.body_code | raw}}
@@ -53,7 +52,7 @@
                     </section>
 
                 </div>
-                <div class=" d-lg-none mobile-home ">
+                <div class="d-flex d-lg-none mobile-home ">
                    {% include header.html %}
                     <section class=" ">
                         {{ content }}
